# pillow-api

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
config/: config.yaml
src/: main.cpp  storage.cpp  storage.hpp
src/handlers/: auth_handler.cpp  auth_handler.hpp  property_handler.cpp  property_handler.hpp  property_item_handler.cpp  property_item_handler.hpp  property_list_handler.cpp  user_handler.cpp  user_handler.hpp  viewing_handler.cpp  viewing_handler.hpp
src/middleware/: auth_middleware.cpp  auth_middleware.hpp
src/models/: property.hpp  user.hpp  viewing.hpp
src/services/: property_service.cpp  property_service.hpp  user_service.cpp  user_service.hpp  viewing_service.cpp  viewing_service.hpp
src/utils/: auth_utils.cpp  auth_utils.hpp
tests/: README.md  run_tests.sh  test_api.sh
